--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,52 +71,60 @@
             android:id="@+id/radioButton2"
             android:layout_width="match_parent"
             android:layout_height="26dp"
-            android:text="RadioButton" />
+            android:text="Soltero" />
 
         <RadioButton
             android:id="@+id/radioButton5"
             android:layout_width="match_parent"
             android:layout_height="26dp"
-            android:text="RadioButton" />
+            android:text="casado" />
 
         <RadioButton
             android:id="@+id/radioButton6"
             android:layout_width="match_parent"
             android:layout_height="26dp"
-            android:text="RadioButton" />
+            android:text="Viudo" />
 
     </RadioGroup>
-
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="100dp"
-        android:layout_height="24dp"
-        android:text="CheckBox"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="166dp" />
-
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="100dp"
-        android:layout_height="24dp"
-        android:text="CheckBox"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="257dp" />
 
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="100dp"
         android:layout_height="24dp"
-        android:text="CheckBox"
+        android:text="Libros y Literatura"
         tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="197dp" />
+        tools:layout_editor_absoluteY="229dp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="100dp"
+        android:layout_height="24dp"
+        android:text="Belleza"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="198dp" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="100dp"
+        android:layout_height="24dp"
+        android:text="Educación"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="289dp" />
 
     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="100dp"
         android:layout_height="24dp"
-        android:text="CheckBox"
+        android:text="Cameras"
         tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="229dp" />
+        tools:layout_editor_absoluteY="261dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Preferencias"
+        tools:layout_editor_absoluteX="88dp"
+        tools:layout_editor_absoluteY="163dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
