--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,78 +11,81 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Estado civil"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.264"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
+        app:layout_constraintHorizontal_bias="0.241"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/enviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="76dp"
         android:text="enviar"
-        app:layout_constraintBaseline_toBaselineOf="@+id/borrar"
-        app:layout_constraintEnd_toStartOf="@+id/borrar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/borrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="129dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginBottom="77dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/enviar" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/campo1txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="112dp"
+        android:layout_marginTop="27dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/campo2txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Apellidos"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="105dp" />
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="@+id/campo1txt"
+        app:layout_constraintTop_toBottomOf="@+id/campo1txt" />
 
     <RadioGroup
-        android:layout_width="118dp"
-        android:layout_height="90dp"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="366dp">
+        android:id="@+id/radioGroup10"
+        android:layout_width="149dp"
+        android:layout_height="153dp"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/borrar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="48dp"
             android:text="Soltero" />
 
         <RadioButton
             android:id="@+id/radioButton5"
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="48dp"
             android:text="casado" />
 
         <RadioButton
             android:id="@+id/radioButton6"
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="48dp"
             android:text="Viudo" />
 
     </RadioGroup>
@@ -90,41 +93,64 @@
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="100dp"
-        android:layout_height="24dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="79dp"
+        android:layout_marginTop="91dp"
+        android:layout_marginEnd="79dp"
+        android:layout_marginBottom="93dp"
         android:text="Libros y Literatura"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="229dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/Preferencias"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/campo2txt" />
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="100dp"
-        android:layout_height="24dp"
+        android:layout_width="101dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="81dp"
+        android:layout_marginBottom="80dp"
         android:text="Belleza"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="198dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/campo2txt" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="100dp"
-        android:layout_height="24dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="2dp"
         android:text="Educación"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="289dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Preferencias"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
+        app:layout_constraintTop_toTopOf="@+id/checkBox4" />
 
     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="100dp"
-        android:layout_height="24dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginBottom="23dp"
         android:text="Cameras"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="261dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/Preferencias"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="74dp"
+        android:layout_marginBottom="24dp"
         android:text="Preferencias"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="163dp" />
+        app:layout_constraintBottom_toTopOf="@+id/checkBox"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
